fixed css issues, added main spiner and data on mobile devices

--- a/css/partials/_loaders.scss
+++ b/css/partials/_loaders.scss
@@ -54,3 +54,22 @@
     -webkit-transform: scaleY(1.0);
   }
 }
+
+
+/* Main spinner */
+.spinner.main-spinner {
+    background: #fff;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    position: absolute;
+    z-index: 30;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spinner.main-spinner > div {
+   height: 60px;
+   margin: 0 3px;
+}
